@@ -46,4 +46,6 @@ around release => sub {
   return;
 };
 
+__PACKAGE__->meta->make_immutable;
+
 1;
